# final-project-balance-robot

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dor.py
.devcontainer/: devcontainer.json
docker/: Dockerfile
docs/: docker_ros2_setup.md
ros2_ws/src/balance_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/balance_robot/balance_robot/: diagnostics_node.py  encoder_node.py  imu_node.py  lqr_controller_node.py  motor_node.py  param_utils.py  safety_state.py  state_estimator_node.py  teleop_node.py
ros2_ws/src/balance_robot/balance_robot/hal/: __init__.py  base_encoder.py  base_imu.py  base_motor_driver.py  hardware_encoder.py  hardware_imu.py  hardware_motor_driver.py  mock_encoder.py  mock_imu.py  mock_motor_driver.py
ros2_ws/src/balance_robot/config/: robot_params.yaml
ros2_ws/src/balance_robot/docs/: bno086_integration.md  encoder_integration.md  joystick_integration.md  motor_driver_integration.md
ros2_ws/src/balance_robot/launch/: robot.launch.py
ros2_ws/src/balance_robot/msg/: RobotState.msg  SystemStatus.msg  WheelState.msg
ros2_ws/src/balance_robot/scripts/: diagnostics_node  encoder_node  imu_node  lqr_controller_node  motor_node  safety_state_node  state_estimator_node  teleop_node
